x2goclient (3.99.3.0-0~x2go1) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.3.0):
    - Rebuild i18n files, add x2goclient_dk.ts for the new
      Danish translator (Christoffer Krakou).
    - Update German translation.
  * Add rdesktop and xfreerdp to Recommends.

  [ Daniel Lindgren ]
  * New upstream version (3.99.3.0):
    - Update Swedish translation.

  [ Terje Andersen ]
  * New upstream version (3.99.3.0):
    - Update Norwegian Bokmal translation.

  [ Christoffer Krakou ]
  * New upstream version (3.99.3.0):
    - Add Danish translation to x2goclient.
    - Proof read Danish translation.

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.3.0):
    - Add settings for direct RDP connection.
    - Implement direct RDP connection using standalone client.
    - Build direct RDP feature only for linux.
    - Add DEFINES += __linux__ to project file when building linux binaries
      (need to define Q_OS_LINUX in moc generator).
    - Update "ts" files.
    - Fixed label "SSH port" and "RDP port" to "SSH port:" and "RDP port:".
      Update "ts" files once again.
    - Add translation for label "RDP port:". Update "ts" files updated
      Russian translation.
    - Add translation for checkbox "Direct RDP Connection" and update Russian
      and German translation.
    - Restart pulse server on windows if it crashed.
    - Show "Advanced Options" button only if RDP session chosen

 -- Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>  Wed, 05 Sep 2012 11:40:47 +0200

x2goclient (3.99.2.2-0~x2go2) unstable; urgency=low

  * Add Conflicts/Replaces for x2goclient-gtk.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 20 Aug 2012 09:58:47 +0200

x2goclient (3.99.2.2-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.2.2):
    - Drop Encoding key from .desktop file (as it is deprecated
      according to latest FreeDesktop.org specs).